grammar.js
    tsql_file: $ => choice(
      repeat($.batch)
      ,seq($.execute_body_batch, repeat($.go_statement))
    ),

    batch: $ => choice(
      prec(1,$.go_statement)
      ,seq(optional($.execute_body_batch),choice($.go_statement, repeat1($.sql_clauses)), repeat($.go_statement))
      ,//TODO seq($.batch_level_statement, repeat($.go_statement))
       //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L46-L51
    ),

    // Comments
    // Single-line: -- until end of line
    // Multi-line:  /* ... */
    func_proc_name_server_database_schema: $ => choice(
      seq(optional(field('server', $.id_)), DOT, optional(field('database', $.id_)), DOT, optional(field('schema', $.id_)), DOT, field('procedure', $.id_))
      ,$.func_proc_name_database_schema
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5140
    func_proc_name_database_schema: $ => choice(
      seq(optional(field('database', $.id_)), DOT, optional(field('schema', $.id_)), DOT, field('procedure', $.id_))
      ,$.func_proc_name_schema
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5136
    func_proc_name_schema: $ => prec.right(seq(optional(seq(field('schema',$.id_), DOT)), field('procedure', $.id_))),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3158
    default: $ => token(/DEFAULT/i),
    null_: $ => token(/NULL/i),

    sql_clauses: $ => prec.right(choice(
      seq($.dml_clause, optional(SEMI))
      ,seq($.cfl_statement, optional(SEMI))
      ,seq($.ddl_clause, optional(SEMI))
      ,seq($.another_statement, optional(SEMI))
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L53-L61
    )),

    // =====================
    // DDL
    // =====================

    ddl_clause: $ => choice(
      $.create_table
      ,$.create_index
      ,$.create_or_alter_procedure
      ,$.create_or_alter_function
      ,$.create_or_alter_view
      ,$.create_or_alter_trigger
      ,$.create_schema
      ,$.create_type
      ,$.create_sequence
      ,$.create_synonym
      ,$.truncate_table
      ,$.alter_database
      ,$.alter_table
      ,$.drop_table
      ,$.drop_view
      ,$.drop_procedure
      ,$.drop_function
      ,$.drop_index
      ,$.drop_trigger
      ,$.drop_database
      ,$.drop_schema
      ,$.drop_sequence
      ,$.drop_type
      ,$.drop_user
      ,$.drop_login
      ,$.drop_synonym
      ,$.drop_statistics
      ,$.create_login
      ,$.alter_login
      ,$.create_user
      ,$.alter_user
      ,$.create_role
      ,$.alter_role
      ,$.drop_role
      ,$.create_server_role
      ,$.alter_server_role
      ,$.drop_server_role
    ),

    //https://learn.microsoft.com/en-us/sql/t-sql/statements/alter-database-transact-sql-file-and-filegroup-options
    create_or_alter: $ => choice(
      seq(token(/CREATE/i), optional(seq(token(/OR/i), token(/ALTER/i)))),
      token(/ALTER/i),
    ),

    // =====================
    // CREATE INDEX
    // =====================

    create_or_alter_procedure: $ => prec.right(seq(
      $.create_or_alter,
      choice(token(/PROCEDURE/i), token(/PROC/i)),
      $.func_proc_name_server_database_schema,
      optional(seq($.procedure_param, repeat(seq(',', $.procedure_param)))),
      optional(seq(token(/WITH/i), $.proc_option, repeat(seq(',', $.proc_option)))),
      token(/AS/i),
      repeat1($.sql_clauses),
    )),

    procedure_param: $ => prec.right(seq(
      $.LOCAL_ID_,
      $.data_type,
      optional(token(/VARYING/i)),
      optional(seq('=', $.expression)),
      optional(choice($.OUTPUT, token(/READONLY/i))),
    )),

    proc_option: $ => choice(
      token(/ENCRYPTION/i),
      seq(token(/EXECUTE/i), token(/AS/i), choice(token(/CALLER/i), token(/SELF/i), token(/OWNER/i), STRING)),
      token(/RECOMPILE/i),
    ),

    // =====================
    // CREATE/ALTER FUNCTION
    // =====================

    create_table: $ => seq(
      token(/CREATE/i), token(/TABLE/i),
      $.full_table_name,
      token('('),
      $.table_element, repeat(seq(token(','), $.table_element)),
      token(')')
    ),

    table_element: $ => choice(
      $.column_definition,
      $.table_constraint,
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L1485
    column_definition: $ => prec.right(seq(
      field('name', $.id_),
      choice(
        seq($.data_type, repeat(choice(
          $.null_notnull,
          $.identity_column,
          $.column_constraint,
        ))),
        seq(token(/AS/i), $.expression, optional(token(/PERSISTED/i))),
      ),
    )),

    null_notnull: $ => choice(
      seq(token(/NOT/i), $.null_),
      $.null_,
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L1488
    identity_column: $ => seq(
      token(/IDENTITY/i),
      optional(seq(token('('), $.decimal_, token(','), $.decimal_, token(')'))),
    ),

    column_constraint: $ => seq(
      optional(seq(token(/CONSTRAINT/i), field('name', $.id_))),
      choice(
        seq(token(/PRIMARY/i), token(/KEY/i)),
        token(/UNIQUE/i),
        seq($.default, $.expression),
        seq(token(/CHECK/i), token('('), $.search_condition, token(')')),
        seq(optional(seq(token(/FOREIGN/i), token(/KEY/i))),
          token(/REFERENCES/i), $.full_table_name,
          optional(seq(token('('), $.id_, token(')')))),
      )
    ),

    table_constraint: $ => seq(
      optional(seq(token(/CONSTRAINT/i), field('name', $.id_))),
      choice(
        seq(token(/PRIMARY/i), token(/KEY/i),
          token('('), $.column_name_list, token(')')),
        seq(token(/UNIQUE/i),
          token('('), $.column_name_list, token(')')),
        seq(token(/FOREIGN/i), token(/KEY/i),
          token('('), $.column_name_list, token(')'),
          token(/REFERENCES/i), $.full_table_name,
          optional(seq(token('('), $.column_name_list, token(')')))),
        seq(token(/CHECK/i), token('('), $.search_condition, token(')')),
        seq($.default, $.expression, token(/FOR/i), $.id_),
      )
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L250-L264
    cfl_statement: $ => choice(
      $.block_statement
      ,$.if_statement
      ,$.while_statement
      ,$.return_statement
      ,$.break_statement
      ,$.continue_statement
      ,$.try_catch_statement
      ,$.throw_statement
      ,$.print_statement
      ,$.raiseerror_statement
      ,$.goto_statement
      ,$.waitfor_statement
      //TODO label_statement
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L251
    block_statement: $ => seq(
      token(/BEGIN/i), repeat($.sql_clauses), token(/END/i)
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L255
    if_statement: $ => prec.right(seq(
      token(/IF/i), $.search_condition
      ,$.sql_clauses
      ,optional(seq(token(/ELSE/i), $.sql_clauses))
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L262
    string_lit: $ => token(seq(
      optional('N')
      ,"'" //Opening Single Quote
      ,repeat(choice(
        /[^']/,               // Any character except a single quote
        "''"                  // Escaped single quote (two single quotes)
      ))
      ,"'" //Closing Single Quote

    )),


    dml_clause: $ => choice(
      $.select_statement_standalone
      ,$.insert_statement
      ,$.update_statement
      ,$.delete_statement
      ,$.merge_statement
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L63-L70
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2161
    insert_statement: $ => seq(
      optional($.with_expression)
      ,token(/INSERT/i)
      ,optional($.top_clause)
      ,optional(token(/INTO/i))
      ,$.full_table_name
      ,optional(seq(token('('), $.column_name_list, token(')')))
      ,optional($.output_clause)
      ,$.insert_statement_value
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2168
    insert_statement_value: $ => choice(
      seq(token(/VALUES/i), $.value_list, repeat(seq(token(','), $.value_list)))
      ,$.select_statement
      ,seq(token(/DEFAULT/i), token(/VALUES/i))
      ,$.execute_statement
    ),

    value_list: $ => seq(token('('), $.expression_list_, token(')')),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2195
    update_statement: $ => prec.right(seq(
      optional($.with_expression)
      ,token(/UPDATE/i)
      ,optional($.top_clause)
      ,$.update_target
      ,token(/SET/i)
      ,$.update_elem, repeat(seq(token(','), $.update_elem))
      ,optional($.output_clause)
      ,optional(seq(token(/FROM/i), $.table_sources))
      ,optional(seq(token(/WHERE/i), $.search_condition))
    )),

    update_target: $ => choice(
      $.full_table_name
      ,$.local_id_
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2221
    update_elem: $ => choice(
      seq($.full_column_name, token('='), $.expression)
      ,seq($.full_column_name, $.assignment_operator, $.expression)
      ,seq($.LOCAL_ID_, token('='), $.expression)
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2148
    select_statement_standalone: $ => seq(
      optional($.with_expression),
      $.select_statement
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3955
    column_name_list: $ => seq($.id_, repeat(seq(token(','), $.id_))),

    select_statement: $ => prec.left(seq(
      $.query_expression
      ,optional($.select_order_by_clause)
      ,optional($.for_clause)
      ,optional($.option_clause)
      ,optional(SEMI)
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4055-L4068
    query_expression: $ => prec.left(seq(
      $.query_specification, repeat($.sql_union)
      //TODO parenthesized query_expression https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3999
    )),

    query_specification: $ => prec.right(seq(
      $.select
      ,optional(choice(token(/ALL/i), token(/DISTINCT/i)))
      ,optional($.top_clause)
      ,$.select_list
      ,optional(seq(token(/INTO/i), $.full_table_name))
      ,optional($._query_from_clause)
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4010-L4023
    )),

    // Hidden sub-rule: breaks 7-optional cross-product into 4 × 3 (FROM is anchor)
    _query_from_clause: $ => prec.right(seq(
      token(/FROM/i), $.table_sources
      ,optional(seq(token(/WHERE/i), $.search_condition))
      ,optional($.groupby)
      ,optional(seq(token(/HAVING/i), $.search_condition))
    )),

    select: $ => token(/SELECT/i),
    //https://learn.microsoft.com/en-us/sql/t-sql/queries/select-clause-transact-sql?view=sql-server-ver16&redirectedfrom=MSDN
    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4119
    select_list: $ => seq($.select_list_elem, repeat(seq(token(','), $.select_list_elem))),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4143-L4148
    select_list_elem: $ => choice(
      $.asterisk
      ,seq(field('table', $.id_), DOT, $.asterisk)  // qualified asterisk: table.*
      ,$.udt_elem
      ,seq($.LOCAL_ID_, choice($.assignment_operator, token('=')), $.expression)
      ,$.expression_elem
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4018
    asterisk: $ => token(/\*/),

    //https://learn.microsoft.com/en-us/sql/t-sql/queries/select-clause-transact-sql?view=sql-server-ver16
    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4133
    expression_elem: $ => prec.right(choice(
      seq(field('leftAlias', $.column_alias), token(/=/), field('leftAssignment', $.expression))
      ,seq(field('expressionAs', $.expression), optional($.as_column_alias))
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4910
    table_sources: $ => seq(
      $.table_source, repeat(seq(token(','), $.table_source))
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4150-L4153
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4160C4-L4163
    table_source: $ => seq($.table_source_item, repeat($.join_part)),

    table_source_item: $ => seq(
      choice(
        $.open_json             // OPENJSON (handles own alias)
        ,$.open_xml             // OPENXML (handles own alias)
        ,$.rowset_function      // OPENROWSET
        ,$.openquery            // OPENQUERY
        ,$.opendatasource       // OPENDATASOURCE
        ,$.change_table         // CHANGETABLE
        ,$.nodes_method         // XML .nodes() method
        ,$.table_valued_function  // must be before full_table_name (both start with id_)
        ,$.full_table_name
        ,seq(token('('), $.select_statement, token(')'))  // derived table
        ,$.local_id_
      )
      ,choice(
        $.pivot_clause          // PIVOT path (includes its own alias)
        ,$.unpivot_clause       // UNPIVOT path (includes its own alias)
        ,seq(optional($.as_table_alias), optional($.tablesample), optional($.with_table_hints))  // normal path
      )
    ),

    // OPENJSON — https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4190
    full_table_name: $ => prec.right(seq(
      optional(choice(
      //NOTE? whats this dotdot example https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5118
        seq(field('server', $.id_), DOT, field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT)
      ))
      ,field('table', $.id_)
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5155-L5160
    full_column_name: $ => prec.right(seq(
      optional(choice(
        seq(field('server', $.id_), DOT, field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('table', $.id_), DOT)
        ,seq(token(/DELETED/i), DOT)
        ,seq(token(/INSERTED/i), DOT)
      ))
      ,field('column', $.id_)
    )),

    //TODO CORPUS
    expression: $ => choice(
      $.primitive_expression
      ,$.full_column_name
      ,$.function_call
      ,$.bracket_expression
      ,$.case_expression
      ,$.unary_operator_expression
      // Multiplicative: * / %
      ,prec.left(5, seq($.expression, $.asterisk, $.expression))
      ,prec.left(5, seq($.expression, token('/'), $.expression))
      ,prec.left(5, seq($.expression, token('%'), $.expression))
      // Additive: + -
      ,prec.left(4, seq($.expression, $.PLUS, $.expression))
      ,prec.left(4, seq($.expression, token('-'), $.expression))
      // Bitwise: & ^ | ||
      ,prec.left(3, seq($.expression, token('&'), $.expression))
      ,prec.left(3, seq($.expression, token('^'), $.expression))
      ,prec.left(3, seq($.expression, token('|'), $.expression))
      ,prec.left(3, seq($.expression, token('||'), $.expression))
      // COLLATE
      ,prec.left(7, seq($.expression, $.collation_))
      // AT TIME ZONE
      ,prec.left(7, seq($.expression, $.AT_KEYWORD, token(/TIME/i), token(/ZONE/i), $.expression))
      // XML methods: .value() .query() .exist() .modify()
      ,prec.left(8, seq($.expression, DOT, choice($.value_call, $.query_call, $.exist_call, $.modify_call)))
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3945
    subquery: $ => $.select_statement,

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3940
