test/corpus/create_procedure.txt
=====================================
Minimal procedure
=====================================

CREATE PROCEDURE dbo.GetAll
AS
SELECT * FROM t;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (asterisk)))
                      (table_sources
                        (table_source
                          (table_source_item
                            (full_table_name
                              (id_))))))))))))))))

=====================================
Proc with params
=====================================

CREATE PROCEDURE dbo.GetById @Id INT
AS
SELECT * FROM t WHERE Id = @Id;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (int_)))
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (asterisk)))
                      (table_sources
                        (table_source
                          (table_source_item
                            (full_table_name
                              (id_)))))
                      (search_condition
                        (predicate
                          (expression
                            (full_column_name
                              (id_)))
                          (comparison_operator)
                          (expression
                            (primitive_expression
                              (LOCAL_ID_))))))))))))))))

=====================================
Proc with multiple params and defaults
=====================================

CREATE PROCEDURE dbo.Search
  @Name NVARCHAR(100) = NULL,
  @Age INT = 0,
  @Status VARCHAR(20) OUTPUT
AS
SELECT * FROM t WHERE Name = @Name;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (nvarchar_)
              (decimal_))
            (expression
              (primitive_expression
                (null_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (int_))
            (expression
              (primitive_expression
                (primitive_constant
                  (decimal_)))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (varchar_)
              (decimal_))
            (OUTPUT))
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (asterisk)))
                      (table_sources
                        (table_source
                          (table_source_item
                            (full_table_name
                              (id_)))))
                      (search_condition
                        (predicate
                          (expression
                            (full_column_name
                              (id_)))
                          (comparison_operator)
                          (expression
                            (primitive_expression
                              (LOCAL_ID_))))))))))))))))

=====================================
Proc with OR ALTER
=====================================

CREATE OR ALTER PROCEDURE dbo.Upsert @Id INT, @Val VARCHAR(50)
AS
BEGIN
  IF EXISTS (SELECT 1 FROM t WHERE Id = @Id)
    UPDATE t SET Val = @Val WHERE Id = @Id
  ELSE
    INSERT INTO t (Id, Val) VALUES (@Id, @Val)
END;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (int_)))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (varchar_)
              (decimal_)))
          (sql_clauses
            (cfl_statement
              (block_statement
                (sql_clauses
                  (cfl_statement
                    (if_statement
                      (search_condition
                        (predicate
                          (subquery
                            (select_statement
                              (query_expression
                                (query_specification
                                  (select)
                                  (select_list
                                    (select_list_elem
                                      (expression_elem
                                        (expression
                                          (primitive_expression
                                            (primitive_constant
                                              (decimal_)))))))
                                  (table_sources
                                    (table_source
                                      (table_source_item
                                        (full_table_name
                                          (id_)))))
                                  (search_condition
                                    (predicate
                                      (expression
                                        (full_column_name
                                          (id_)))
                                      (comparison_operator)
                                      (expression
                                        (primitive_expression
                                          (LOCAL_ID_)))))))))))
                      (sql_clauses
                        (dml_clause
                          (update_statement
                            (update_target
                              (full_table_name
                                (id_)))
                            (update_elem
                              (full_column_name
                                (id_))
                              (expression
                                (primitive_expression
                                  (LOCAL_ID_))))
                            (search_condition
                              (predicate
                                (expression
                                  (full_column_name
                                    (id_)))
                                (comparison_operator)
                                (expression
                                  (primitive_expression
                                    (LOCAL_ID_))))))))
                      (sql_clauses
                        (dml_clause
                          (insert_statement
                            (insert_target
                              (full_table_name
                                (id_)))
                            (column_name_list
                              (id_)
                              (id_))
                            (insert_statement_value
                              (value_list
                                (expression_list_
                                  (expression
                                    (primitive_expression
                                      (LOCAL_ID_)))
                                  (expression
                                    (primitive_expression
                                      (LOCAL_ID_))))))))))))))))))))

=====================================
Proc with WITH options
=====================================

CREATE PROCEDURE dbo.Secure @X INT
WITH ENCRYPTION, RECOMPILE
AS
SELECT @X;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (int_)))
          (proc_option)
          (proc_option)
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (expression_elem
                            (expression
                              (primitive_expression
                                (LOCAL_ID_)))))))))))))))))

=====================================
ALTER PROCEDURE
=====================================

ALTER PROCEDURE dbo.GetAll
AS
SELECT * FROM t WHERE Active = 1;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (asterisk)))
                      (table_sources
                        (table_source
                          (table_source_item
                            (full_table_name
                              (id_)))))
                      (search_condition
                        (predicate
                          (expression
                            (full_column_name
                              (id_)))
                          (comparison_operator)
                          (expression
                            (primitive_expression
                              (primitive_constant
                                (decimal_)))))))))))))))))

=====================================
PROC shorthand
=====================================

CREATE PROC dbo.Quick
AS
SELECT 1;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (expression_elem
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (decimal_))))))))))))))))))

=====================================
Proc with EXECUTE AS
=====================================

CREATE PROCEDURE dbo.RunAsOwner @Val INT
WITH EXECUTE AS OWNER
AS
SELECT @Val;

-------------------------------------

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_or_alter_procedure
          (create_or_alter)
          (func_proc_name_server_database_schema
            (func_proc_name_database_schema
              (func_proc_name_schema
                (id_)
                (id_))))
          (procedure_param
            (LOCAL_ID_)
            (data_type
              (int_)))
          (proc_option)
          (sql_clauses
            (dml_clause
              (select_statement_standalone
                (select_statement
                  (query_expression
                    (query_specification
                      (select)
                      (select_list
                        (select_list_elem
                          (expression_elem
                            (expression
                              (primitive_expression
                                (LOCAL_ID_)))))))))))))))))
