test/corpus/create_table.txt
=====================================
CREATE TABLE basic
=====================================

CREATE TABLE Products (
    ProductId int,
    ProductName varchar(100)
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))))
          (table_element
            (column_definition
              (id_)
              (data_type
                (varchar_)
                (decimal_)))))))))

=====================================
CREATE TABLE with IDENTITY
=====================================

CREATE TABLE Orders (
    OrderId int IDENTITY(1,1)
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (identity_column
                (decimal_)
                (decimal_)))))))))

=====================================
CREATE TABLE with NOT NULL and PRIMARY KEY
=====================================

CREATE TABLE Artists (
    ArtistId int IDENTITY(1,1) NOT NULL PRIMARY KEY,
    ArtistName nvarchar(255) NOT NULL,
    ActiveFrom date
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (identity_column
                (decimal_)
                (decimal_))
              (null_notnull
                (null_))
              (column_constraint)))
          (table_element
            (column_definition
              (id_)
              (data_type
                (nvarchar_)
                (decimal_))
              (null_notnull
                (null_))))
          (table_element
            (column_definition
              (id_)
              (data_type
                (date_)))))))))

=====================================
CREATE TABLE with DEFAULT
=====================================

CREATE TABLE Settings (
    SettingId int NOT NULL,
    Value nvarchar(100) DEFAULT N'unknown'
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))))
          (table_element
            (column_definition
              (id_)
              (data_type
                (nvarchar_)
                (decimal_))
              (column_constraint
                (default)
                (expression
                  (primitive_expression
                    (primitive_constant
                      (string_lit))))))))))))

=====================================
CREATE TABLE with table-level PRIMARY KEY
=====================================

CREATE TABLE OrderItems (
    OrderId int NOT NULL,
    ProductId int NOT NULL,
    CONSTRAINT PK_OrderItems PRIMARY KEY (OrderId, ProductId)
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))))
          (table_element
            (table_constraint
              (id_)
              (column_name_list
                (id_)
                (id_)))))))))

=====================================
CREATE TABLE with FOREIGN KEY REFERENCES
=====================================

CREATE TABLE Orders (
    OrderId int NOT NULL PRIMARY KEY,
    CustomerId int NOT NULL REFERENCES Customers(CustomerId)
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))
              (column_constraint)))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))
              (column_constraint
                (full_table_name
                  (id_))
                (id_)))))))))

=====================================
CREATE TABLE with CHECK constraint
=====================================

CREATE TABLE Employees (
    EmployeeId int NOT NULL,
    Age int CHECK (Age >= 18),
    CONSTRAINT CHK_Age CHECK (Age >= 18 AND Age <= 65)
)

-----

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (null_notnull
                (null_))))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (column_constraint
                (search_condition
                  (predicate
                    (expression
                      (full_column_name
                        (id_)))
                    (comparison_operator)
                    (expression
                      (primitive_expression
                        (primitive_constant
                          (decimal_)))))))))
          (table_element
            (table_constraint
              (id_)
              (search_condition
                (search_condition
                  (predicate
                    (expression
                      (full_column_name
                        (id_)))
                    (comparison_operator)
                    (expression
                      (primitive_expression
                        (primitive_constant
                          (decimal_))))))
                (search_condition
                  (predicate
                    (expression
                      (full_column_name
                        (id_)))
                    (comparison_operator)
                    (expression
                      (primitive_expression
                        (primitive_constant
                          (decimal_))))))))))))))

=====================================
Column with COLLATE
=====================================

CREATE TABLE t1 (col1 VARCHAR(100) COLLATE Latin1_General_CI_AS NOT NULL)

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (varchar_)
                (decimal_))
              (id_)
              (null_notnull
                (null_)))))))))

=====================================
PRIMARY KEY CLUSTERED column constraint
=====================================

CREATE TABLE t1 (id INT PRIMARY KEY CLUSTERED)

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))
              (column_constraint))))))))

=====================================
PRIMARY KEY CLUSTERED table constraint
=====================================

CREATE TABLE t2 (id INT, CONSTRAINT PK_t2 PRIMARY KEY CLUSTERED (id))

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))))
          (table_element
            (table_constraint
              (id_)
              (column_name_list
                (id_)))))))))

=====================================
UNIQUE NONCLUSTERED constraint
=====================================

CREATE TABLE t1 (name VARCHAR(50) UNIQUE NONCLUSTERED)

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (varchar_)
                (decimal_))
              (column_constraint))))))))

=====================================
CREATE TABLE AS FileTable minimal
=====================================

CREATE TABLE t AS FileTable

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_)))))))

=====================================
CREATE TABLE AS FileTable with option
=====================================

CREATE TABLE t AS FileTable WITH (FILETABLE_DIRECTORY='foo')

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (WITH)
          (create_table_option
            (id_)
            (string_lit)))))))

=====================================
CREATE TABLE AS FileTable full
=====================================

CREATE TABLE t AS FileTable ON fg1 TEXTIMAGE_ON "default" FILESTREAM_ON "default" WITH (FILETABLE_COLLATE_FILENAME=Latin1_General_bin)

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (id_)
          (id_)
          (id_)
          (WITH)
          (create_table_option
            (id_)
            (id_)))))))

=====================================
CREATE TABLE with ON and TEXTIMAGE_ON string_lit
=====================================

CREATE TABLE t (c1 INT) ON 'default' TEXTIMAGE_ON 'default'

---

(tsql_file
  (batch
    (sql_clauses
      (ddl_clause
        (create_table
          (full_table_name
            (id_))
          (table_element
            (column_definition
              (id_)
              (data_type
                (int_))))
          (string_lit)
          (string_lit))))))

=====================================
CREATE TABLE with TEXTIMAGE_ON and FILESTREAM_ON
=====================================

CREATE TABLE t (c1 INT) TEXTIMAGE_ON someGroup FILESTREAM_ON anotherGroup

---
